# django_layout

./: pyproject.toml  test.html
apps/common/: exception.py  models.py  serializers.py  views.py
apps/user/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/ws/: consumers.py  routing.py
django_layout/: asgi.py  urls.py  wsgi.py
middleware/: __init__.py  dump.py  exception.py  log.py  page_number_pagination.py  response.py
middleware/authentication/: authentication.py
middleware/permissions/: picture_permissions.py
middleware/throttles/: picture_throttles.py
setting/: dev.py  prod.py  settings.py
